<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_units_Key"
        android:title="@string/pref_units_title"
        android:dialogTitle="@string/pref_units_title"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="@string/pref_units_default_value"
        android:summary="%s"/>
    <ListPreference
        android:key="@string/pref_sort_key"
        android:title="@string/pref_sort_title"
        android:dialogTitle="@string/pref_sort_title"
        android:entries="@array/pref_sort_entries"
        android:entryValues="@array/pref_sort_values"
        android:defaultValue="@string/pref_sort_original_value"
        android:summary="%s"/>
    <SwitchPreference
        android:key="@string/pref_theme_key"
        android:title="@string/pref_theme_title"
        android:defaultValue="@bool/pref_theme_default_value"/>

</PreferenceScreen>